@@ -1,5 +1,5 @@
 /*******************************************************************************
- * Copyright (c) 2011, 2024 IBM Corporation and others.
+ * Copyright (c) 2011, 2025 IBM Corporation and others.
  * All rights reserved. This program and the accompanying materials
  * are made available under the terms of the Eclipse Public License 2.0
  * which accompanies this distribution, and is available at
@@ -291,7 +291,7 @@ public class LibertyClient {
 
         // This is the only case where we will allow the messages.log name to  be changed
         // by the fat framework -- because we want to look at messasges.log for start/stop/blah
-        // messags, we shouldn't be pointing it all over everywhere else. For those FAT tests
+        // messages, we shouldn't be pointing it all over everywhere else. For those FAT tests
         // that need a messages file in an alternate location, they should set the corresponding
         // com.ibm.ws.logging.message.file.name property in bootstrap.properties
         String nonDefaultLogFile = b.getValue("NonDefaultConsoleLogFileName");
@@ -627,12 +627,6 @@ public class LibertyClient {
             if (clientNeedsToRunWithJava2Security()) {
                 addJava2SecurityPropertiesToBootstrapFile(f);
                 Log.info(c, "startClientWithArgs", "Java 2 Security enabled for client " + getClientName() + " because GLOBAL_JAVA2SECURITY=true");
-
-                // If we are running on Java 18+, then we need to explicitly enable the security manager
-                if (javaInfo.majorVersion() >= 18) {
-                    Log.info(c, "startClientWithArgs", "Java 18 + and java2security is global, setting -Djava.security.manager=allow");
-                    JVM_ARGS += " -Djava.security.manager=allow";
-                }
             } else {
                 LOG.warning("The build is configured to run FAT tests with Java 2 Security enabled, but the FAT client " + getClientName() +
                             " is exempt from Java 2 Security regression testing.");
@@ -661,7 +655,13 @@ public class LibertyClient {
             }
 
             if (bootstrapHasJava2SecProps) {
-                // If we are running on Java 18+, then we need to explicitly enable the security manager
+                if (javaInfo.majorVersion() >= 24) {
+                    // Security manager is permanently disabled starting in Java 24
+                    LOG.severe("The build is configured to run FAT tests with Java 2 security enabled, but the security manager is permanently disabled in Java versions 24 and later.  The security manager cannot be set!");
+                    throw new RuntimeException("The security manager is permanently disabled in Java versions 24 and later.  When running FATs, use @MaximumJavaLevel(javaLevel = 23) or disable Java 2 security to prevent this test from failing running in Java 24 or later.");
+                }
+
+                // If we are running on Java 18 through 23, then we need to explicitly enable the security manager
                 Log.info(c, "startClientWithArgs", "Java 18 + Java2Sec requested, setting -Djava.security.manager=allow");
                 JVM_ARGS += " -Djava.security.manager=allow";
             }
@@ -671,13 +671,25 @@ public class LibertyClient {
         // if we have FIPS 140-3 enabled, and the matched java/platform, add JVM arg
         if (isFIPS140_3EnabledAndSupported()) {
             Log.info(c, "startClientWithArgs", "The JDK version: " + javaInfo.majorVersion() + " and vendor: " + JavaInfo.Vendor.IBM);
-            Log.info(c, "startClientWithArgs", "FIPS 140-3 global build properties is set for Client " + getClientName()
+
+            if (javaInfo.majorVersion() == 17){
+                Log.info(c, "startClientWithArgs", "FIPS 140-3 global build properties is set for Client " + getClientName()
+                                                   + " with IBM Java 17, adding required JVM arguments to run with FIPS 140-3 enabled");
+                                                   
+                JVM_ARGS += " -Dsemeru.fips=true";
+                JVM_ARGS += " -Dsemeru.customprofile=OpenJCEPlusFIPS.FIPS140-3-withPKCS12";
+                JVM_ARGS += " -Dcom.ibm.fips.mode=140-3";
+                // JVM_ARGS += " -Djavax.net.debug=all";  // Uncomment as needed for additional debugging
+            } else if (javaInfo.majorVersion() == 8) {
+                Log.info(c, "startClientWithArgs", "FIPS 140-3 global build properties is set for Client " + getClientName()
                                                + " with IBM Java 8, adding JVM arguments -Xenablefips140-3, ...,  to run with FIPS 140-3 enabled");
 
-            JVM_ARGS += " -Xenablefips140-3";
-            JVM_ARGS += " -Dcom.ibm.jsse2.usefipsprovider=true";
-            JVM_ARGS += " -Dcom.ibm.jsse2.usefipsProviderName=IBMJCEPlusFIPS";
-            // JVM_ARGS += " -Djavax.net.debug=all";  // Uncomment as needed for additional debugging
+                JVM_ARGS += " -Xenablefips140-3";
+                JVM_ARGS += " -Dcom.ibm.jsse2.usefipsprovider=true";
+                JVM_ARGS += " -Dcom.ibm.jsse2.usefipsProviderName=IBMJCEPlusFIPS";
+                JVM_ARGS += " -Dcom.ibm.fips.mode=140-3";
+                // JVM_ARGS += " -Djavax.net.debug=all";  // Uncomment as needed for additional debugging
+            }
         }
 
         // Look for forced client trace..
@@ -747,6 +759,51 @@ public class LibertyClient {
         Log.info(c, method, "Using additional env props: " + envVars.toString());
 
         Log.info(c, method, "Starting Client with command: " + cmd);
+
+        if (isFIPS140_3EnabledAndSupported()) {
+            String clientSecurityDir = clientRoot + File.separator + "resources" + File.separator + "security";
+            File ltpaFIPSKeys = new File(clientSecurityDir, "ltpaFIPS.keys");
+            File ltpaKeys = new File(clientSecurityDir, "ltpa.keys");
+        
+            if (!ltpaKeys.exists() && !ltpaFIPSKeys.exists()) {
+                Log.info(this.getClass(), "startClientWithArgs", 
+                        "FIPS 140-3 global build properties are set for client " + getClientName() 
+                        + ", but neither ltpa.keys nor ltpaFIPS.keys is found in " + clientSecurityDir);
+            } else {
+                Log.info(this.getClass(), "startClientWithArgs", 
+                        "FIPS 140-3 global build properties are set for client " + getClientName() 
+                        + ", swapping ltpaFIPS.keys into ltpa.keys");
+        
+                try {
+                    // Delete ltpa.keys if it exists
+                    if (ltpaKeys.exists()) {
+                        if (!ltpaKeys.delete()) {
+                            Log.info(this.getClass(), "startClientWithArgs", "Failed to delete existing ltpa.keys.");
+                        } else {
+                            Log.info(this.getClass(), "startClientWithArgs", "Waiting for 1 second after deleting ltpa.keys.");
+                            Thread.sleep(1000);
+                        }
+                    }
+        
+                    // Rename ltpaFIPS.keys to ltpa.keys if ltpaFIPS.keys exists
+                    if (ltpaFIPSKeys.exists()) {
+                        if (!ltpaFIPSKeys.renameTo(ltpaKeys)) {
+                            Log.info(this.getClass(), "startClientWithArgs", "Failed to rename ltpaFIPS.keys to ltpa.keys.");
+                        } else {
+                            Log.info(this.getClass(), "startClientWithArgs", "Waiting for 1 second after rename.");
+                            Thread.sleep(1000);
+                        }
+                    
+                        // Log the content of ltpa.keys
+                        String content = FileUtils.readFile(ltpaKeys.getAbsolutePath());
+                        Log.info(this.getClass(), "printLtpaKeys", "Content of ltpa.keys: " + content);
+                    }
+        
+                } catch (Exception e) {
+                    Log.info(this.getClass(), "startClientWithArgs", "Error during ltpa.keys handling: " + e.getMessage());
+                }
+            }
+        }        
 
         ProgramOutput output;
         if (executeAsync) {
@@ -2081,7 +2138,7 @@ public class LibertyClient {
      * Method used by exposed installApp methods that calls into the ApplicationManager
      * to actually install the required application
      *
-     * @param  appPath   Absoulte path to application (includes app name)
+     * @param  appPath   Absolute path to application (includes app name)
      * @throws Exception
      */
     protected void finalInstallApp(String appPath) throws Exception {
@@ -3892,17 +3949,21 @@ public class LibertyClient {
     public boolean isFIPS140_3EnabledAndSupported() {
         String methodName = "isFIPS140_3EnabledAndSupported";
         boolean isIBMJVM8 = (javaInfo.majorVersion() == 8) && (javaInfo.VENDOR == Vendor.IBM);
+        boolean isIBMJVM17 = (javaInfo.majorVersion() == 17) && (javaInfo.VENDOR == Vendor.IBM);
         if (GLOBAL_CLIENT_FIPS_140_3) {
             Log.info(c, methodName, "Liberty client is running JDK version: " + javaInfo.majorVersion() + " and vendor: " + javaInfo.VENDOR);
             if (isIBMJVM8) {
                 Log.info(c, methodName, "global build properties FIPS_140_3 is set for client " + getClientName() +
                                         " and IBM java 8 is available to run with FIPS 140-3 enabled.");
+            } else if (isIBMJVM17) {
+                Log.info(c, methodName, "global build properties FIPS_140_3 is set for client " + getClientName() +
+                                        " and IBM java 17 is available to run with FIPS 140-3 enabled.");
             } else {
                 Log.info(c, methodName, "The global build properties FIPS_140_3 is set for client " + getClientName() +
-                                        ",  but no IBM java 8 on liberty client to run with FIPS 140-3 enabled.");
+                                        ",  but no IBM java 8 or java 17 on liberty client to run with FIPS 140-3 enabled.");
             }
         }
-        return GLOBAL_CLIENT_FIPS_140_3 && isIBMJVM8;
+        return GLOBAL_CLIENT_FIPS_140_3 && (isIBMJVM8 || isIBMJVM17);
     }
 
     //FIPS 140-3
